fix: tables execute first

--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
       "backgroundColor": "#ffffff"
     },
     "scheme": "myapp",
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -20,15 +22,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.danielpqb.templatedaniel"
     },
     "web": {
       "favicon": "./src/assets/favicon.png",
       "bundler": "metro"
     },
     "extra": {
+      "router": {
+        "origin": false
+      },
       "eas": {
-        "projectId": "b29354ab-03f7-4c98-bbbe-c30069040c36"
+        "projectId": "56172a21-777c-4faf-a240-16c93be178c2"
       }
     },
     "runtimeVersion": {
@@ -37,6 +43,8 @@
     "updates": {
       "url": "https://u.expo.dev/b29354ab-03f7-4c98-bbbe-c30069040c36"
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
